--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,8 +5,187 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
+    <header class="header">
+      <img src="https://via.placeholder.com/40x40"  width="40" height="40" alt="Логотип Cat Energy" class="logo-image">
+      <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo-text">
+      <nav class="nav">
+        <button class="nav__toggle" type="button">Открыть меню</button>
+        <div class="nav__wrapper">
+          <ul class="nav__list">
+            <li class="nav__item nav__item--active"><a href="">Главная</a></li>
+            <li class="nav__item"><a href="">Каталог продукции</a></li>
+            <li class="nav__item"><a href="">Подбор программы</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+    <section class="catalog">
+      <h1 class="catalog__header">Каталог продукции</h1>
+      <ul class="catalog__list">
+
+        <li class="catalog__item catalog__item--chicken catalog__item--500g">
+          <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 500" class="catalog__picture--chicken catalog__picture--500g">
+          <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
+          <table class="catalog__table">
+            <tr>
+              <td>Объем</td> <td>500 г</td>
+            </tr>
+            <tr>
+              <td>Вкус</td> <td>Курица</td>
+            </tr>
+            <tr>
+              <td>Цена</td> <td>700 Р</td>
+            </tr>
+          </table>
+          <a class="catalog__button" href="">заказать</a>
+        </li>
+
+        <li class="catalog__item catalog__item--chicken catalog__item--1000g">
+          <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 1000" class="catalog__picture--chicken catalog__picture--1000g">
+          <h2 class="catalog__name">Cat Energy PRO 1000 г</h2>
+          <table class="catalog__table">
+            <tr>
+              <td>Объем</td> <td>1000 г</td>
+            </tr>
+            <tr>
+              <td>Вкус</td> <td>Курица</td>
+            </tr>
+            <tr>
+              <td>Цена</td> <td>1000 Р</td>
+            </tr>
+          </table>
+          <a class="catalog__button" href="">заказать</a>
+        </li>
+
+        <li class="catalog__item catalog__item--fish catalog__item--500g">
+          <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 500" class="catalog__picture--fish catalog__picture--500g">
+          <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
+          <table class="catalog__table">
+            <tr>
+              <td>Объем</td> <td>500 г</td>
+            </tr>
+            <tr>
+              <td>Вкус</td> <td>Рыба</td>
+            </tr>
+            <tr>
+              <td>Цена</td> <td>700 Р</td>
+            </tr>
+          </table>
+          <a class="catalog__button" href="">заказать</a>
+        </li>
+
+        <li class="catalog__item catalog__item--fish catalog__item--1000g">
+          <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 500" class="catalog__picture--fish catalog__picture--1000g">
+          <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
+          <table class="catalog__table">
+            <tr>
+              <td>Объем</td> <td>1000 г</td>
+            </tr>
+            <tr>
+              <td>Вкус</td> <td>Рыба</td>
+            </tr>
+            <tr>
+              <td>Цена</td> <td>1000 Р</td>
+            </tr>
+          </table>
+          <a class="catalog__button" href="">заказать</a>
+        </li>
+
+        <li class="catalog__item catalog__item--
+buckwheat catalog__item--500g">
+          <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 500" class="catalog__picture--
+buckwheat catalog__picture--500g">
+          <h2 class="catalog__name">Cat Energy Slim 500 г</h2>
+          <table class="catalog__table">
+            <tr>
+              <td>Объем</td> <td>500 г</td>
+            </tr>
+            <tr>
+              <td>Вкус</td> <td>Гречка</td>
+            </tr>
+            <tr>
+              <td>Цена</td> <td>400 Р</td>
+            </tr>
+          </table>
+          <a class="catalog__button" href="">заказать</a>
+        </li>
+
+        <li class="catalog__item catalog__item--
+buckwheat catalog__item--1000g">
+          <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 1000" class="catalog__picture--
+buckwheat catalog__picture--1000g">
+          <h2 class="catalog__name">Cat Energy Slim 1000 г</h2>
+          <table class="catalog__table">
+            <tr>
+              <td>Объем</td> <td>1000 г</td>
+            </tr>
+            <tr>
+              <td>Вкус</td> <td>Гречка</td>
+            </tr>
+            <tr>
+              <td>Цена</td> <td>700 Р</td>
+            </tr>
+          </table>
+          <a class="catalog__button" href="">заказать</a>
+        </li>
+
+        <li class="catalog__item catalog__item--rice catalog__item--500g">
+          <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 500" class="catalog__picture--rice catalog__picture--500g">
+          <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
+          <table class="catalog__table">
+            <tr>
+              <td>Объем</td> <td>500 г</td>
+            </tr>
+            <tr>
+              <td>Вкус</td> <td>Рис</td>
+            </tr>
+            <tr>
+              <td>Цена</td> <td>500 Р</td>
+            </tr>
+          </table>
+          <a class="catalog__button" href="">заказать</a>
+        </li>
+
+      </ul>
+      <div class="catalog__more more">
+        <button class="more__plus" type="button" name="button">+</button>
+        <p class="more__goods">Показать еще 100500 товаров</p>
+        <p class="more__taste">На самом деле вкусов гораздо больше!</p>
+        <a class="more__button"href="#">   Показать все</a>
+      </div>
+
+    </section>
+
+    <footer class="footer">
+      <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo-text footer__logo">
+      <div class="social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a href="" class="social__button social__button--vk">
+              <span class="visually-hidden">Vkontakte</span>
+              <img class="social__image--vk" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="" class="social__button social__button--instagram">
+              <span class="visually-hidden">Instagram</span>
+              <img class="social__image--instagram" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="" class="social__button social__button--facebook">
+              <span class="visually-hidden">Facebook</span>
+              <img class="social__image--facebook" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="copyright">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/30x35"  width="30" height="35" alt="HTML Academy"></a>
+      </div>
+    </footer>
 
   </body>
 </html>
