--- a/source/form.html
+++ b/source/form.html
@@ -5,8 +5,49 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+    <header class="header">
+      <img src="https://via.placeholder.com/40x40"  width="40" height="40" alt="Логотип Cat Energy" class="logo-image">
+      <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo-text">
+      <nav class="nav">
+        <button class="nav__toggle" type="button">Открыть меню</button>
+        <div class="nav__wrapper">
+          <ul class="nav__list">
+            <li class="nav__item nav__item--active"><a href="">Главная</a></li>
+            <li class="nav__item"><a href="">Каталог продукции</a></li>
+            <li class="nav__item"><a href="">Подбор программы</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <footer class="footer">
+      <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo-text footer__logo">
+      <div class="social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a href="" class="social__button social__button--vk">
+              <span class="visually-hidden">Vkontakte</span>
+              <img class="social__image--vk" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="" class="social__button social__button--instagram">
+              <span class="visually-hidden">Instagram</span>
+              <img class="social__image--instagram" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="" class="social__button social__button--facebook">
+              <span class="visually-hidden">Facebook</span>
+              <img class="social__image--facebook" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="copyright">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/30x35"  width="30" height="35" alt="HTML Academy"></a>
+      </div>
+    </footer>
 
   </body>
 </html>
