--- a/source/catalog.html
+++ b/source/catalog.html
@@ -27,15 +27,15 @@
         <li class="catalog__item catalog__item--chicken catalog__item--500g">
           <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 500" class="catalog__picture--chicken catalog__picture--500g">
           <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
-          <table class="catalog__table">
+          <table class="catalog__table table">
             <tr>
-              <td>Объем</td> <td>500 г</td>
+              <td class="table__left">Объем</td> <td class="table__right">500 г</td>
             </tr>
             <tr>
-              <td>Вкус</td> <td>Курица</td>
+              <td class="table__left">Вкус</td> <td class="table__right">Курица</td>
             </tr>
             <tr>
-              <td>Цена</td> <td>700 Р</td>
+              <td class="table__left">Цена</td> <td class="table__right">700 Р</td>
             </tr>
           </table>
           <a class="catalog__button" href="">заказать</a>
@@ -44,15 +44,15 @@
         <li class="catalog__item catalog__item--chicken catalog__item--1000g">
           <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 1000" class="catalog__picture--chicken catalog__picture--1000g">
           <h2 class="catalog__name">Cat Energy PRO 1000 г</h2>
-          <table class="catalog__table">
+          <table class="catalog__table table">
             <tr>
-              <td>Объем</td> <td>1000 г</td>
+              <td class="table__left">Объем</td> <td class="table__right">1000 г</td>
             </tr>
             <tr>
-              <td>Вкус</td> <td>Курица</td>
+              <td class="table__left">Вкус</td> <td class="table__right">Курица</td>
             </tr>
             <tr>
-              <td>Цена</td> <td>1000 Р</td>
+              <td class="table__left">Цена</td> <td class="table__right">1000 Р</td>
             </tr>
           </table>
           <a class="catalog__button" href="">заказать</a>
@@ -61,15 +61,15 @@
         <li class="catalog__item catalog__item--fish catalog__item--500g">
           <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 500" class="catalog__picture--fish catalog__picture--500g">
           <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
-          <table class="catalog__table">
+          <table class="catalog__table table">
             <tr>
-              <td>Объем</td> <td>500 г</td>
+              <td class="table__left">Объем</td> <td class="table__right">500 г</td>
             </tr>
             <tr>
-              <td>Вкус</td> <td>Рыба</td>
+              <td class="table__left">Вкус</td> <td class="table__right">Рыба</td>
             </tr>
             <tr>
-              <td>Цена</td> <td>700 Р</td>
+              <td class="table__left">Цена</td> <td class="table__right">700 Р</td>
             </tr>
           </table>
           <a class="catalog__button" href="">заказать</a>
@@ -78,15 +78,15 @@
         <li class="catalog__item catalog__item--fish catalog__item--1000g">
           <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 500" class="catalog__picture--fish catalog__picture--1000g">
           <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
-          <table class="catalog__table">
+          <table class="catalog__table table">
             <tr>
-              <td>Объем</td> <td>1000 г</td>
+              <td class="table__left">Объем</td> <td class="table__right">1000 г</td>
             </tr>
             <tr>
-              <td>Вкус</td> <td>Рыба</td>
+              <td class="table__left">Вкус</td> <td class="table__right">Рыба</td>
             </tr>
             <tr>
-              <td>Цена</td> <td>1000 Р</td>
+              <td class="table__left">Цена</td> <td class="table__right">1000 Р</td>
             </tr>
           </table>
           <a class="catalog__button" href="">заказать</a>
@@ -97,15 +97,15 @@ buckwheat catalog__item--500g">
           <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 500" class="catalog__picture--
 buckwheat catalog__picture--500g">
           <h2 class="catalog__name">Cat Energy Slim 500 г</h2>
-          <table class="catalog__table">
+          <table class="catalog__table table">
             <tr>
-              <td>Объем</td> <td>500 г</td>
+              <td class="table__left">Объем</td> <td class="table__right">500 г</td>
             </tr>
             <tr>
-              <td>Вкус</td> <td>Гречка</td>
+              <td class="table__left">Вкус</td> <td class="table__right">Гречка</td>
             </tr>
             <tr>
-              <td>Цена</td> <td>400 Р</td>
+              <td class="table__left">Цена</td> <td class="table__right">400 Р</td>
             </tr>
           </table>
           <a class="catalog__button" href="">заказать</a>
@@ -116,15 +116,15 @@ buckwheat catalog__item--1000g">
           <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 1000" class="catalog__picture--
 buckwheat catalog__picture--1000g">
           <h2 class="catalog__name">Cat Energy Slim 1000 г</h2>
-          <table class="catalog__table">
+          <table class="catalog__table table">
             <tr>
-              <td>Объем</td> <td>1000 г</td>
+              <td class="table__left">Объем</td> <td class="table__right">1000 г</td>
             </tr>
             <tr>
-              <td>Вкус</td> <td>Гречка</td>
+              <td class="table__left">Вкус</td> <td class="table__right">Гречка</td>
             </tr>
             <tr>
-              <td>Цена</td> <td>700 Р</td>
+              <td class="table__left">Цена</td> <td class="table__right">700 Р</td>
             </tr>
           </table>
           <a class="catalog__button" href="">заказать</a>
@@ -133,15 +133,15 @@ buckwheat catalog__picture--1000g">
         <li class="catalog__item catalog__item--rice catalog__item--500g">
           <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 500" class="catalog__picture--rice catalog__picture--500g">
           <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
-          <table class="catalog__table">
+          <table class="catalog__table table">
             <tr>
-              <td>Объем</td> <td>500 г</td>
+              <td class="table__left">Объем</td> <td class="table__right">500 г</td>
             </tr>
             <tr>
-              <td>Вкус</td> <td>Рис</td>
+              <td class="table__left">Вкус</td> <td class="table__right">Рис</td>
             </tr>
             <tr>
-              <td>Цена</td> <td>500 Р</td>
+              <td class="table__left">Цена</td> <td class="table__right">500 Р</td>
             </tr>
           </table>
           <a class="catalog__button" href="">заказать</a>
