--- a/source/form.html
+++ b/source/form.html
@@ -6,43 +6,42 @@
   </head>
   <body>
     <header class="header">
-      <img src="https://via.placeholder.com/40x40"  width="40" height="40" alt="Логотип Cat Energy" class="logo-image">
-      <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo-text">
       <nav class="nav">
+        <a href="index.html" class="nav__logo-link">
+          <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo">
+        </a>
         <button class="nav__toggle" type="button">Открыть меню</button>
-        <div class="nav__wrapper">
-          <ul class="nav__list">
-            <li class="nav__item nav__item--active"><a href="">Главная</a></li>
-            <li class="nav__item"><a href="">Каталог продукции</a></li>
-            <li class="nav__item"><a href="">Подбор программы</a></li>
-          </ul>
-        </div>
+        <ul class="nav__list">
+          <li class="nav__item nav__item--active"><a href="index.html">Главная</a></li>
+          <li class="nav__item"><a href="catalog.html">Каталог продукции</a></li>
+          <li class="nav__item"><a>Подбор программы</a></li>
+        </ul>
       </nav>
     </header>
     <footer class="footer">
-      <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo-text footer__logo">
-      <div class="social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a href="" class="social__button social__button--vk">
-              <span class="visually-hidden">Vkontakte</span>
-              <img class="social__image--vk" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
-            </a>
-          </li>
-          <li class="social__item">
-            <a href="" class="social__button social__button--instagram">
-              <span class="visually-hidden">Instagram</span>
-              <img class="social__image--instagram" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
-            </a>
-          </li>
-          <li class="social__item">
-            <a href="" class="social__button social__button--facebook">
-              <span class="visually-hidden">Facebook</span>
-              <img class="social__image--facebook" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
-            </a>
-          </li>
-        </ul>
-      </div>
+      <a href="index.html" class="footer__logo-link">
+        <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo footer__logo">
+      </a>
+      <ul class="social">
+        <li class="social__item">
+          <a href="https://vk.com/" class="social__button social__button--vk">
+            <span class="visually-hidden">Vkontakte</span>
+            <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+          </a>
+        </li>
+        <li class="social__item">
+          <a href="https://www.instagram.com/" class="social__button social__button--instagram">
+            <span class="visually-hidden">Instagram</span>
+            <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+          </a>
+        </li>
+        <li class="social__item">
+          <a href="https://www.facebook.com/" class="social__button social__button--facebook">
+            <span class="visually-hidden">Facebook</span>
+            <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+          </a>
+        </li>
+      </ul>
       <div class="copyright">
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
         <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/30x35"  width="30" height="35" alt="HTML Academy"></a>
