--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,181 +6,197 @@
   </head>
   <body>
     <header class="header">
-      <img src="https://via.placeholder.com/40x40"  width="40" height="40" alt="Логотип Cat Energy" class="logo-image">
-      <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo-text">
       <nav class="nav">
+        <a href="index.html" class="nav__logo-link">
+          <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo">
+        </a>
         <button class="nav__toggle" type="button">Открыть меню</button>
-        <div class="nav__wrapper">
-          <ul class="nav__list">
-            <li class="nav__item nav__item--active"><a href="">Главная</a></li>
-            <li class="nav__item"><a href="">Каталог продукции</a></li>
-            <li class="nav__item"><a href="">Подбор программы</a></li>
-          </ul>
-        </div>
+        <ul class="nav__list">
+          <li class="nav__item nav__item--active"><a href="index.html">Главная</a></li>
+          <li class="nav__item"><a>Каталог продукции</a></li>
+          <li class="nav__item"><a href="form.html">Подбор программы</a></li>
+        </ul>
       </nav>
     </header>
+    <main class="main">
+      <section class="catalog">
+        <h1 class="catalog__header">Каталог продукции</h1>
+        <div class="catalog__list">
 
-    <section class="catalog">
-      <h1 class="catalog__header">Каталог продукции</h1>
-      <ul class="catalog__list">
+          <article class="catalog__item">
+            <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 500" class="catalog__picture">
+            <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
+            <table class="catalog__table table-features">
+              <tr>
+                <td class="table-features__cell-name">Объем</td>
+                <td class="table-features__cell-value">500 г</td>
+              </tr>
+              <tr>
+                <td class="table-features__cell-name">Вкус</td>
+                <td class="table-features__cell-value">Курица</td>
+              </tr>
+              <tr>
+                <td class="table-features__cell-name">Цена</td>
+                <td class="table-features__cell-value">700 Р</td>
+              </tr>
+            </table>
+            <a class="catalog__button" href="">заказать</a>
+          </article>
 
-        <li class="catalog__item catalog__item--chicken catalog__item--500g">
-          <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 500" class="catalog__picture--chicken catalog__picture--500g">
-          <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
-          <table class="catalog__table table">
-            <tr>
-              <td class="table__left">Объем</td> <td class="table__right">500 г</td>
-            </tr>
-            <tr>
-              <td class="table__left">Вкус</td> <td class="table__right">Курица</td>
-            </tr>
-            <tr>
-              <td class="table__left">Цена</td> <td class="table__right">700 Р</td>
-            </tr>
-          </table>
-          <a class="catalog__button" href="">заказать</a>
-        </li>
+          <article class="catalog__item">
+            <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 1000" class="catalog__picture">
+            <h2 class="catalog__name">Cat Energy PRO 1000 г</h2>
+            <table class="catalog__table table-features">
+              <tr>
+                <td class="table-features__cell-name">Объем</td>
+                <td class="table-features__cell-value">1000 г</td>
+              </tr>
+              <tr>
+                <td class="table-features__cell-name">Вкус</td>
+                <td class="table-features__cell-value">Курица</td>
+              </tr>
+              <tr>
+                <td class="table-features__cell-name">Цена</td>
+                <td class="table-features__cell-value">1000 Р</td>
+              </tr>
+            </table>
+            <a class="catalog__button" href="">заказать</a>
+          </article>
 
-        <li class="catalog__item catalog__item--chicken catalog__item--1000g">
-          <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 1000" class="catalog__picture--chicken catalog__picture--1000g">
-          <h2 class="catalog__name">Cat Energy PRO 1000 г</h2>
-          <table class="catalog__table table">
-            <tr>
-              <td class="table__left">Объем</td> <td class="table__right">1000 г</td>
-            </tr>
-            <tr>
-              <td class="table__left">Вкус</td> <td class="table__right">Курица</td>
-            </tr>
-            <tr>
-              <td class="table__left">Цена</td> <td class="table__right">1000 Р</td>
-            </tr>
-          </table>
-          <a class="catalog__button" href="">заказать</a>
-        </li>
+          <article class="catalog__item">
+            <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 500" class="catalog__picture">
+            <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
+            <table class="catalog__table table-features">
+              <tr>
+                <td class="table-features__cell-name">Объем</td>
+                <td class="table-features__cell-value">500 г</td>
+              </tr>
+              <tr>
+                <td class="table-features__cell-name">Вкус</td>
+                <td class="table-features__cell-value">Рыба</td>
+              </tr>
+              <tr>
+                <td class="table-features__cell-name">Цена</td>
+                <td class="table-features__cell-value">700 Р</td>
+              </tr>
+            </table>
+            <a class="catalog__button" href="">заказать</a>
+          </article>
 
-        <li class="catalog__item catalog__item--fish catalog__item--500g">
-          <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 500" class="catalog__picture--fish catalog__picture--500g">
-          <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
-          <table class="catalog__table table">
-            <tr>
-              <td class="table__left">Объем</td> <td class="table__right">500 г</td>
-            </tr>
-            <tr>
-              <td class="table__left">Вкус</td> <td class="table__right">Рыба</td>
-            </tr>
-            <tr>
-              <td class="table__left">Цена</td> <td class="table__right">700 Р</td>
-            </tr>
-          </table>
-          <a class="catalog__button" href="">заказать</a>
-        </li>
+          <article class="catalog__item">
+            <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 500" class="catalog__picture">
+            <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
+            <table class="catalog__table table-features">
+              <tr>
+                <td class="table-features__cell-name">Объем</td>
+                <td class="table-features__cell-value">1000 г</td>
+              </tr>
+              <tr>
+                <td class="table-features__cell-name">Вкус</td>
+                <td class="table-features__cell-value">Рыба</td>
+              </tr>
+              <tr>
+                <td class="table-features__cell-name">Цена</td>
+                <td class="table-features__cell-value">1000 Р</td>
+              </tr>
+            </table>
+            <a class="catalog__button" href="">заказать</a>
+          </article>
 
-        <li class="catalog__item catalog__item--fish catalog__item--1000g">
-          <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 500" class="catalog__picture--fish catalog__picture--1000g">
-          <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
-          <table class="catalog__table table">
-            <tr>
-              <td class="table__left">Объем</td> <td class="table__right">1000 г</td>
-            </tr>
-            <tr>
-              <td class="table__left">Вкус</td> <td class="table__right">Рыба</td>
-            </tr>
-            <tr>
-              <td class="table__left">Цена</td> <td class="table__right">1000 Р</td>
-            </tr>
-          </table>
-          <a class="catalog__button" href="">заказать</a>
-        </li>
+          <article class="catalog__item">
+            <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 500" class="catalog__picture">
+            <h2 class="catalog__name">Cat Energy Slim 500 г</h2>
+            <table class="catalog__table table">
+              <tr>
+                <td class="table-features__cell-name">Объем</td>
+                <td class="table-features__cell-value">500 г</td>
+              </tr>
+              <tr>
+                <td class="table-features__cell-name">Вкус</td>
+                <td class="table-features__cell-value">Гречка</td>
+              </tr>
+              <tr>
+                <td class="table-features__cell-name">Цена</td>
+                <td class="table-features__cell-value">400 Р</td>
+              </tr>
+            </table>
+            <a class="catalog__button" href="">заказать</a>
+          </article>
 
-        <li class="catalog__item catalog__item--
-buckwheat catalog__item--500g">
-          <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 500" class="catalog__picture--
-buckwheat catalog__picture--500g">
-          <h2 class="catalog__name">Cat Energy Slim 500 г</h2>
-          <table class="catalog__table table">
-            <tr>
-              <td class="table__left">Объем</td> <td class="table__right">500 г</td>
-            </tr>
-            <tr>
-              <td class="table__left">Вкус</td> <td class="table__right">Гречка</td>
-            </tr>
-            <tr>
-              <td class="table__left">Цена</td> <td class="table__right">400 Р</td>
-            </tr>
-          </table>
-          <a class="catalog__button" href="">заказать</a>
-        </li>
+          <article class="catalog__item">
+            <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 1000" class="catalog__picture">
+            <h2 class="catalog__name">Cat Energy Slim 1000 г</h2>
+            <table class="catalog__table table">
+              <tr>
+                <td class="table-features__cell-name">Объем</td>
+                <td class="table-features__cell-value">1000 г</td>
+              </tr>
+              <tr>
+                <td class="table-features__cell-name">Вкус</td>
+                <td class="table-features__cell-value">Гречка</td>
+              </tr>
+              <tr>
+                <td class="table-features__cell-name">Цена</td>
+                <td class="table-features__cell-value">700 Р</td>
+              </tr>
+            </table>
+            <a class="catalog__button" href="">заказать</a>
+          </article>
 
-        <li class="catalog__item catalog__item--
-buckwheat catalog__item--1000g">
-          <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 1000" class="catalog__picture--
-buckwheat catalog__picture--1000g">
-          <h2 class="catalog__name">Cat Energy Slim 1000 г</h2>
-          <table class="catalog__table table">
-            <tr>
-              <td class="table__left">Объем</td> <td class="table__right">1000 г</td>
-            </tr>
-            <tr>
-              <td class="table__left">Вкус</td> <td class="table__right">Гречка</td>
-            </tr>
-            <tr>
-              <td class="table__left">Цена</td> <td class="table__right">700 Р</td>
-            </tr>
-          </table>
-          <a class="catalog__button" href="">заказать</a>
-        </li>
+          <article class="catalog__item">
+            <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 500" class="catalog__picture">
+            <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
+            <table class="catalog__table table">
+              <tr>
+                <td class="table-features__cell-name">Объем</td>
+                <td class="table-features__cell-value">500 г</td>
+              </tr>
+              <tr>
+                <td class="table-features__cell-name">Вкус</td>
+                <td class="table-features__cell-value">Рис</td>
+              </tr>
+              <tr>
+                <td class="table-features__cell-name">Цена</td>
+                <td class="table-features__cell-value">500 Р</td>
+              </tr>
+            </table>
+            <a class="catalog__button" href="">заказать</a>
+          </article>
 
-        <li class="catalog__item catalog__item--rice catalog__item--500g">
-          <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 500" class="catalog__picture--rice catalog__picture--500g">
-          <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
-          <table class="catalog__table table">
-            <tr>
-              <td class="table__left">Объем</td> <td class="table__right">500 г</td>
-            </tr>
-            <tr>
-              <td class="table__left">Вкус</td> <td class="table__right">Рис</td>
-            </tr>
-            <tr>
-              <td class="table__left">Цена</td> <td class="table__right">500 Р</td>
-            </tr>
-          </table>
-          <a class="catalog__button" href="">заказать</a>
-        </li>
+        </div>
+        <div class="catalog__more more">
+          <a href="" class="more__plus"></a>
+          <p class="more__goods">Показать еще 100500 товаров</p>
+          <p class="more__taste">На самом деле вкусов гораздо больше!</p>
+          <a class="more__button" href="#">Показать все</a>
+        </div>
 
-      </ul>
-      <div class="catalog__more more">
-        <button class="more__plus" type="button" name="button">+</button>
-        <p class="more__goods">Показать еще 100500 товаров</p>
-        <p class="more__taste">На самом деле вкусов гораздо больше!</p>
-        <a class="more__button"href="#">   Показать все</a>
-      </div>
-
-    </section>
-
+      </section>
+    </main>
     <footer class="footer">
-      <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo-text footer__logo">
-      <div class="social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a href="" class="social__button social__button--vk">
-              <span class="visually-hidden">Vkontakte</span>
-              <img class="social__image--vk" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
-            </a>
-          </li>
-          <li class="social__item">
-            <a href="" class="social__button social__button--instagram">
-              <span class="visually-hidden">Instagram</span>
-              <img class="social__image--instagram" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
-            </a>
-          </li>
-          <li class="social__item">
-            <a href="" class="social__button social__button--facebook">
-              <span class="visually-hidden">Facebook</span>
-              <img class="social__image--facebook" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
-            </a>
-          </li>
-        </ul>
-      </div>
+      <a href="index.html" class="footer__logo-link">
+        <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo footer__logo">
+      </a>
+      <ul class="social">
+        <li class="social__item">
+          <a href="https://vk.com/" class="social__button social__button--vk">
+            <span class="visually-hidden">Vkontakte</span>
+            <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+          </a>
+        </li>
+        <li class="social__item">
+          <a href="https://www.instagram.com/" class="social__button social__button--instagram">
+            <span class="visually-hidden">Instagram</span>
+            <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+          </a>
+        </li>
+        <li class="social__item">
+          <a href="https://www.facebook.com/" class="social__button social__button--facebook">
+            <span class="visually-hidden">Facebook</span>
+            <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+          </a>
+        </li>
+      </ul>
       <div class="copyright">
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
         <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/30x35"  width="30" height="35" alt="HTML Academy"></a>
