--- a/source/index.html
+++ b/source/index.html
@@ -6,32 +6,27 @@
   </head>
   <body>
     <header class="header">
-      <img src="https://via.placeholder.com/40x40"  width="40" height="40" alt="Логотип Cat Energy" class="logo-image">
-      <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo-text">
       <nav class="nav">
+        <a class="nav__logo-link">
+          <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo">
+        </a>
         <button class="nav__toggle" type="button">Открыть меню</button>
-        <div class="nav__wrapper">
-          <ul class="nav__list">
-            <li class="nav__item nav__item--active"><a href="">Главная</a></li>
-            <li class="nav__item"><a href="">Каталог продукции</a></li>
-            <li class="nav__item"><a href="">Подбор программы</a></li>
-          </ul>
-<!--       в примере академии аналогичное меню выглядит так:
-           <ul class="main-nav__list site-list">
-             <li class="site-list__item site-list__item--active">
-           есть ли смысл давать отдельный класс site-list списку и соответственно элементам? они же вряд ли где-то кроме меню навигации могут использоваться-->
-        </div>
+        <ul class="nav__list">
+          <li class="nav__item nav__item--active"><a>Главная</a></li>
+          <li class="nav__item"><a href="catalog.html">Каталог продукции</a></li>
+          <li class="nav__item"><a href="form.html">Подбор программы</a></li>
+        </ul>
       </nav>
     </header>
     <main class="main">
       <section class="promo">
         <h1 class="promo__header">Функциональное питание для котов</h1>
-        <h2 class="promo__motivation">Занялся собой? Займись котом!</h2>
+        <p class="promo__motivation">Занялся собой? Займись котом!</p>
         <img src="https://via.placeholder.com/240x260"  width="240" height="260" alt="Банка корма" class="promo__can"> <!-- возможно эта картинка будет фоном -->
+        <h2 class="visually-hidden">подобрать программу</h2>
+        <a href="" class="promo__button">подобрать программу</a>
       </section>
       <section class="program">
-        <h2 class="visually-hidden">подобрать программу</h2>
-        <a href="" class="program__button">подобрать программу</a>
         <div class="program__variant program__variant--slim">
           <img class="program__logo program__logo--slim" src="https://via.placeholder.com/55x55"  width="55" height="55" alt="slim logo">
           <h3 class="program__header">Похудение</h3>
@@ -49,19 +44,15 @@
         <h2 class="advantages__header">Как это работает</h2>
         <ul class="advantages__list">
           <li class="advantages__item advantages__item--healthy">
-            <img class="advantages__logo advantages__logo--healthy" src="https://via.placeholder.com/60x60"  width="60" height="60" alt="advantage-1">
             <p class="advantages__text">Функциональное питание содержит только полезные питательные вещества.</p>
           </li>
           <li class="advantages__item advantages__item--powder">
-            <img class="advantages__logo advantages__logo--powder" src="https://via.placeholder.com/60x60"  width="60" height="60" alt="advantage-2">
             <p class="advantages__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
           </li>
           <li class="advantages__item advantages__item--food">
-            <img class="advantages__logo--food" src="https://via.placeholder.com/60x60"  width="60" height="60" alt="advantage-3">
             <p class="advantages__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
           </li>
           <li class="advantages__item advantages__item--time">
-            <img class="advantages__logo advantages__logo--time" src="https://via.placeholder.com/60x60"  width="60" height="60" alt="advantage-4">
             <p class="advantages__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
           </li>
         </ul>
@@ -69,29 +60,29 @@
 
     </main>
     <footer class="footer">
-      <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo-text footer__logo">
-      <div class="social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a href="" class="social__button social__button--vk">
-              <span class="visually-hidden">Vkontakte</span>
-              <img class="social__image--vk" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
-            </a>
-          </li>
-          <li class="social__item">
-            <a href="" class="social__button social__button--instagram">
-              <span class="visually-hidden">Instagram</span>
-              <img class="social__image--instagram" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
-            </a>
-          </li>
-          <li class="social__item">
-            <a href="" class="social__button social__button--facebook">
-              <span class="visually-hidden">Facebook</span>
-              <img class="social__image--facebook" src="https://via.placeholder.com/20x20" width="20" height="20" alt="vk">
-            </a>
-          </li>
-        </ul>
-      </div>
+      <a href="index.html" class="footer__logo-link">
+        <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo footer__logo">
+      </a>
+      <ul class="social">
+        <li class="social__item">
+          <a href="https://vk.com/" class="social__button social__button--vk">
+            <span class="visually-hidden">Vkontakte</span>
+            <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+          </a>
+        </li>
+        <li class="social__item">
+          <a href="https://www.instagram.com/" class="social__button social__button--instagram">
+            <span class="visually-hidden">Instagram</span>
+            <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+          </a>
+        </li>
+        <li class="social__item">
+          <a href="https://www.facebook.com/" class="social__button social__button--facebook">
+            <span class="visually-hidden">Facebook</span>
+            <img class="social__image" src="https://via.placeholder.com/20x20" width="20" height="20" alt="vk">
+          </a>
+        </li>
+      </ul>
       <div class="copyright">
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
         <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/30x35"  width="30" height="35" alt="HTML Academy"></a>
