--- a/source/index.html
+++ b/source/index.html
@@ -18,14 +18,14 @@
         </ul>
       </nav>
     </header>
+    <section class="promo">
+      <h1 class="promo__header">Функциональное питание для котов</h1>
+      <p class="promo__motivation">Занялся собой? Займись котом!</p>
+      <img src="https://via.placeholder.com/240x260"  width="240" height="260" alt="Банка корма" class="promo__can"> <!-- возможно эта картинка будет фоном -->
+      <h2 class="visually-hidden">подобрать программу</h2>
+      <a href="" class="promo__button">подобрать программу</a>
+    </section>
     <main class="main">
-      <section class="promo">
-        <h1 class="promo__header">Функциональное питание для котов</h1>
-        <p class="promo__motivation">Занялся собой? Займись котом!</p>
-        <img src="https://via.placeholder.com/240x260"  width="240" height="260" alt="Банка корма" class="promo__can"> <!-- возможно эта картинка будет фоном -->
-        <h2 class="visually-hidden">подобрать программу</h2>
-        <a href="" class="promo__button">подобрать программу</a>
-      </section>
       <section class="program">
         <div class="program__variant program__variant--slim">
           <img class="program__logo program__logo--slim" src="https://via.placeholder.com/55x55"  width="55" height="55" alt="slim logo">
@@ -60,7 +60,7 @@
 
     </main>
     <footer class="footer">
-      <a href="index.html" class="footer__logo-link">
+      <a class="footer__logo-link">
         <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo footer__logo">
       </a>
       <ul class="social">
