--- a/source/catalog.html
+++ b/source/catalog.html
@@ -40,7 +40,7 @@
                 <td class="table-features__cell-value">700 Р</td>
               </tr>
             </table>
-            <a class="catalog__button universal-button" href="">заказать</a>
+            <a class="catalog__button button" href="">заказать</a>
           </article>
 
           <article class="catalog__item">
@@ -60,7 +60,7 @@
                 <td class="table-features__cell-value">1000 Р</td>
               </tr>
             </table>
-            <a class="catalog__button universal-button" href="">заказать</a>
+            <a class="catalog__button button" href="">заказать</a>
           </article>
 
           <article class="catalog__item">
@@ -80,7 +80,7 @@
                 <td class="table-features__cell-value">700 Р</td>
               </tr>
             </table>
-            <a class="catalog__button universal-button" href="">заказать</a>
+            <a class="catalog__button button" href="">заказать</a>
           </article>
 
           <article class="catalog__item">
@@ -100,7 +100,7 @@
                 <td class="table-features__cell-value">1000 Р</td>
               </tr>
             </table>
-            <a class="catalog__button universal-button" href="">заказать</a>
+            <a class="catalog__button button" href="">заказать</a>
           </article>
 
           <article class="catalog__item">
@@ -120,7 +120,7 @@
                 <td class="table-features__cell-value">400 Р</td>
               </tr>
             </table>
-            <a class="catalog__button universal-button" href="">заказать</a>
+            <a class="catalog__button button" href="">заказать</a>
           </article>
 
           <article class="catalog__item">
@@ -140,7 +140,7 @@
                 <td class="table-features__cell-value">700 Р</td>
               </tr>
             </table>
-            <a class="catalog__button universal-button" href="">заказать</a>
+            <a class="catalog__button button" href="">заказать</a>
           </article>
 
           <article class="catalog__item">
@@ -160,7 +160,7 @@
                 <td class="table-features__cell-value">500 Р</td>
               </tr>
             </table>
-            <a class="catalog__button universal-button" href="">заказать</a>
+            <a class="catalog__button button" href="">заказать</a>
           </article>
 
         </div>
@@ -168,54 +168,56 @@
           <a href="" class="more__plus"></a>
           <p class="more__goods">Показать еще 100500 товаров</p>
           <p class="more__taste">На самом деле вкусов гораздо больше!</p>
-          <a class="more__button universal-button" href="">Показать все</a>
+          <a class="more__button button" href="">Показать все</a>
         </div>
       </section>
 
       <section class="extra">
         <h2 class="extra__header">Дополнительные товары</h2>
-        <article class="extra__item">
-          <h3 class="extra__name">Сахарозаменитель</h3>
-          <table class="extra__table table-extra">
-            <tr>
-              <td class="table-extra__cell-name">1 упаковка (100 г)</td>
-              <td class="table-extra__cell-value">200 Р.</td>
-            </tr>
-          </table>
-          <a class="extra__button universal-button" href="">заказать</a>
-        </article>
-        <article class="extra__item">
-          <h3 class="extra__name">Питьевая вода</h3>
-          <table class="extra__table table-extra">
-            <tr>
-              <td class="table-extra__cell-name">5 литров</td>
-              <td class="table-extra__cell-value">50 Р.</td>
-            </tr>
-          </table>
-          <a class="extra__button universal-button" href="">заказать</a>
-        </article>
+        <ul class="extra__list">
+          <li class="extra__item">
+            <h3 class="extra__name">Сахарозаменитель</h3>
+            <table class="extra__table table-extra">
+              <tr>
+                <td class="table-extra__cell-name">1 упаковка (100 г)</td>
+                <td class="table-extra__cell-value">200 Р.</td>
+              </tr>
+            </table>
+            <a class="extra__button button" href="">заказать</a>
+          </li>
+          <li class="extra__item">
+            <h3 class="extra__name">Питьевая вода</h3>
+            <table class="extra__table table-extra">
+              <tr>
+                <td class="table-extra__cell-name">5 литров</td>
+                <td class="table-extra__cell-value">50 Р.</td>
+              </tr>
+            </table>
+            <a class="extra__button button" href="">заказать</a>
+          </li>
 
-        <article class="extra__item">
-          <h3 class="extra__name">Молоко</h3>
-          <table class="extra__table table-extra">
-            <tr>
-              <td class="table-extra__cell-name">1 литр</td>
-              <td class="table-extra__cell-value">100 Р.</td>
-            </tr>
-          </table>
-          <a class="extra__button universal-button" href="">заказать</a>
-        </article>
+          <li class="extra__item">
+            <h3 class="extra__name">Молоко</h3>
+            <table class="extra__table table-extra">
+              <tr>
+                <td class="table-extra__cell-name">1 литр</td>
+                <td class="table-extra__cell-value">100 Р.</td>
+              </tr>
+            </table>
+            <a class="extra__button button" href="">заказать</a>
+          </li>
 
-        <article class="extra__item">
-          <h3 class="extra__name">Витамины</h3>
-          <table class="extra__table table-extra">
-            <tr>
-              <td class="table-extra__cell-name">1 упаковка (30 г))</td>
-              <td class="table-extra__cell-value">300 Р.</td>
-            </tr>
-          </table>
-          <a class="extra__button universal-button" href="">заказать</a>
-        </article>
+          <li class="extra__item">
+            <h3 class="extra__name">Витамины</h3>
+            <table class="extra__table table-extra">
+              <tr>
+                <td class="table-extra__cell-name">1 упаковка (30 г))</td>
+                <td class="table-extra__cell-value">300 Р.</td>
+              </tr>
+            </table>
+            <a class="extra__button button" href="">заказать</a>
+          </li>
+        </ul>
 
         <div class="extra__promo promo">
           <p class="promo__text">Закажите все и получите чехол для кота в подарок!</p>
