--- a/source/form.html
+++ b/source/form.html
@@ -29,10 +29,10 @@
           <label for="name" class="form-select__label">Имя:*</label>
           <input type="text" name="name" id="name" placeholder="Барсик" required class="form-select__text-input">
 
-          <label for="name" class="form-select__label">Вес (кг):*</label>
+          <label for="weight" class="form-select__label">Вес (кг):*</label>
           <input type="text" name="weight" id="weight" placeholder="7" required class="form-select__text-input">
 
-          <label for="name" class="form-select__label">Возраст (лет):</label>
+          <label for="age" class="form-select__label">Возраст (лет):</label>
           <input type="text" name="age" id="age" placeholder="7" class="form-select__text-input">
 
           <label for="purpose1" class="form-select__label">Похудение</label>
@@ -49,7 +49,7 @@
           <label for="name_master" class="form-select__label">E-mail:*</label>
           <input type="email" name="name_master" id="name_master" placeholder="kuklachev@gmail.com" required class="form-select__text-input">
 
-          <label for="name" class="form-select__label">Телефон:*</label>
+          <label for="phone" class="form-select__label">Телефон:*</label>
           <input type="tel" name="phone" id="phone" placeholder="8 (960) 900-60-90" required class="form-select__text-input">
 
           <h2 class="form-select__header">Комментарий</h2>
