--- a/source/index.html
+++ b/source/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="header">
       <nav class="nav">
         <a class="nav__logo-link">
-          <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo">
+          <img src="https://via.placeholder.com/191x39"  width="191" height="39" alt="Cat Energy" class="logo">
         </a>
         <button class="nav__toggle" type="button">Открыть меню</button>
         <ul class="nav__list">
@@ -20,22 +21,22 @@
       <section class="promo">
         <h1 class="promo__header">Функциональное питание для котов</h1>
         <p class="promo__motivation">Занялся собой? Займись котом!</p>
-        <img src="https://via.placeholder.com/240x260"  width="240" height="260" alt="Банка корма" class="promo__can"> <!-- возможно эта картинка будет фоном -->
+        <!-- <img src="https://via.placeholder.com/240x260"  width="240" height="260" alt="Банка корма" class="promo__can"> возможно эта картинка будет фоном -->
         <h2 class="visually-hidden">подобрать программу</h2>
         <a href="" class="promo__button button">подобрать программу</a>
       </section>
     </header>
     <main class="main">
       <section class="program">
-        <div class="program__variant program__variant--slim">
-          <img class="program__logo program__logo--slim" src="https://via.placeholder.com/55x55"  width="55" height="55" alt="slim logo">
+        <div class="program__variant">
+          <!-- <img class="program__logo program__logo--slim" src="https://via.placeholder.com/55x55"  width="55" height="55" alt="slim logo"> -->
           <h3 class="program__header">Похудение</h3>
           <p class="program__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a href="" class="program__link">Каталог Slim</a>
         </div>
-        <div class="program__variant program__variant--mass">
-          <img class="program__logo program__logo--mass" src="https://via.placeholder.com/55x55"  width="55" height="55" alt="mass logo">
-          <h3 class="program__header">Набор масс</h3>
+        <div class="program__variant">
+          <!-- <img class="program__logo program__logo--mass" src="https://via.placeholder.com/55x55"  width="55" height="55" alt="mass logo"> -->
+          <h3 class="program__header">Набор массы</h3>
           <p class="program__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <a href="" class="program__link">Каталог Slim</a>
         </div>
@@ -82,33 +83,34 @@
       <div class="footer__map">
         <!-- тут будет карта вместо дива-->
       </div>
-
-      <a class="footer__logo-link">
-        <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo footer__logo">
-      </a>
-      <ul class="social">
-        <li class="social__item">
-          <a href="https://vk.com/" class="social__button social__button--vk">
-            <span class="visually-hidden">Vkontakte</span>
-            <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
-          </a>
-        </li>
-        <li class="social__item">
-          <a href="https://www.instagram.com/" class="social__button social__button--instagram">
-            <span class="visually-hidden">Instagram</span>
-            <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
-          </a>
-        </li>
-        <li class="social__item">
-          <a href="https://www.facebook.com/" class="social__button social__button--facebook">
-            <span class="visually-hidden">Facebook</span>
-            <img class="social__image" src="https://via.placeholder.com/20x20" width="20" height="20" alt="vk">
-          </a>
-        </li>
-      </ul>
-      <div class="copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/30x35"  width="30" height="35" alt="HTML Academy"></a>
+      <div class="footer__grey">
+        <a class="footer__logo-link">
+          <img src="https://via.placeholder.com/128x24"  width="128" height="24" alt="Cat Energy" class="footer__logo">
+        </a>
+        <ul class="social">
+          <li class="social__item">
+            <a href="https://vk.com/" class="social__button social__button--vk">
+              <span class="visually-hidden">Vkontakte</span>
+              <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="https://www.instagram.com/" class="social__button social__button--instagram">
+              <span class="visually-hidden">Instagram</span>
+              <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="https://www.facebook.com/" class="social__button social__button--facebook">
+              <span class="visually-hidden">Facebook</span>
+              <img class="social__image" src="https://via.placeholder.com/20x20" width="20" height="20" alt="vk">
+            </a>
+          </li>
+        </ul>
+        <div class="copyright">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/30x35"  width="30" height="35" alt="HTML Academy"></a>
+        </div>
       </div>
     </footer>
   </body>
