--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="header">
@@ -24,9 +25,10 @@
         <div class="catalog__list">
 
           <article class="catalog__item">
-            <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 500" class="catalog__picture">
-            <h3 class="catalog__name">Cat Energy PRO 500 г</h3>
+            <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 500" class="catalog__picture">
+            <!-- <h3 class="catalog__name">Cat Energy PRO 500 г</h3> -->
             <table class="catalog__table table-features">
+              <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption>
               <tr>
                 <td class="table-features__cell-name">Объем</td>
                 <td class="table-features__cell-value">500 г</td>
@@ -44,120 +46,126 @@
           </article>
 
           <article class="catalog__item">
-            <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 1000" class="catalog__picture">
-            <h3 class="catalog__name">Cat Energy PRO 1000 г</h3>
+            <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 1000" class="catalog__picture">
+            <!-- <h3 class="catalog__name">Cat Energy PRO 1000 г</h3> -->
             <table class="catalog__table table-features">
+              <caption class="table-features__name">Cat&nbsp;Energy PRO 1000&nbsp;г</caption>
               <tr>
-                <td class="table-features__cell-name">Объем</td>
-                <td class="table-features__cell-value">1000 г</td>
+                <td class="table-features__cell">Объем</td>
+                <td class="table-features__cell table-features__cell--right">1000 г</td>
               </tr>
               <tr>
-                <td class="table-features__cell-name">Вкус</td>
-                <td class="table-features__cell-value">Курица</td>
+                <td class="table-features__cell">Вкус</td>
+                <td class="table-features__cell table-features__cell--right">Курица</td>
               </tr>
               <tr>
-                <td class="table-features__cell-name">Цена</td>
-                <td class="table-features__cell-value">1000 Р</td>
+                <td class="table-features__cell">Цена</td>
+                <td class="table-features__cell table-features__cell--right">1000 Р</td>
               </tr>
             </table>
             <a class="catalog__button button" href="">заказать</a>
           </article>
 
           <article class="catalog__item">
-            <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 500" class="catalog__picture">
-            <h3 class="catalog__name">Cat Energy PRO 500 г</h3>
+            <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 500" class="catalog__picture">
+            <!-- <h3 class="catalog__name">Cat Energy PRO 500 г</h3> -->
             <table class="catalog__table table-features">
+              <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption>
               <tr>
-                <td class="table-features__cell-name">Объем</td>
-                <td class="table-features__cell-value">500 г</td>
+                <td class="table-features__cell">Объем</td>
+                <td class="table-features__cell table-features__cell--right">500 г</td>
               </tr>
               <tr>
-                <td class="table-features__cell-name">Вкус</td>
-                <td class="table-features__cell-value">Рыба</td>
+                <td class="table-features__cell">Вкус</td>
+                <td class="table-features__cell table-features__cell--right">Рыба</td>
               </tr>
               <tr>
-                <td class="table-features__cell-name">Цена</td>
-                <td class="table-features__cell-value">700 Р</td>
+                <td class="table-features__cell">Цена</td>
+                <td class="table-features__cell table-features__cell--right">700 Р</td>
               </tr>
             </table>
             <a class="catalog__button button" href="">заказать</a>
           </article>
 
           <article class="catalog__item">
-            <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Pro 500" class="catalog__picture">
-            <h3 class="catalog__name">Cat Energy PRO 500 г</h3>
+            <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 500" class="catalog__picture">
+            <!-- <h3 class="catalog__name">Cat Energy PRO 500 г</h3> -->
             <table class="catalog__table table-features">
+              <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption>
               <tr>
-                <td class="table-features__cell-name">Объем</td>
-                <td class="table-features__cell-value">1000 г</td>
+                <td class="table-features__cell">Объем</td>
+                <td class="table-features__cell table-features__cell--right">1000 г</td>
               </tr>
               <tr>
-                <td class="table-features__cell-name">Вкус</td>
-                <td class="table-features__cell-value">Рыба</td>
+                <td class="table-features__cell">Вкус</td>
+                <td class="table-features__cell table-features__cell--right">Рыба</td>
               </tr>
               <tr>
-                <td class="table-features__cell-name">Цена</td>
-                <td class="table-features__cell-value">1000 Р</td>
+                <td class="table-features__cell">Цена</td>
+                <td class="table-features__cell table-features__cell--right">1000 Р</td>
               </tr>
             </table>
             <a class="catalog__button button" href="">заказать</a>
           </article>
 
           <article class="catalog__item">
-            <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 500" class="catalog__picture">
-            <h3 class="catalog__name">Cat Energy Slim 500 г</h3>
+            <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Slim 500" class="catalog__picture">
+            <!-- <h3 class="catalog__name">Cat Energy Slim 500 г</h3> -->
             <table class="catalog__table table-features">
+              <caption class="table-features__name">Cat&nbsp;Energy Slim 500&nbsp;г</caption>
               <tr>
-                <td class="table-features__cell-name">Объем</td>
-                <td class="table-features__cell-value">500 г</td>
+                <td class="table-features__cell">Объем</td>
+                <td class="table-features__cell table-features__cell--right">500 г</td>
               </tr>
               <tr>
-                <td class="table-features__cell-name">Вкус</td>
-                <td class="table-features__cell-value">Гречка</td>
+                <td class="table-features__cell">Вкус</td>
+                <td class="table-features__cell table-features__cell--right">Гречка</td>
               </tr>
               <tr>
-                <td class="table-features__cell-name">Цена</td>
-                <td class="table-features__cell-value">400 Р</td>
+                <td class="table-features__cell">Цена</td>
+                <td class="table-features__cell table-features__cell--right">400 Р</td>
               </tr>
             </table>
             <a class="catalog__button button" href="">заказать</a>
           </article>
 
           <article class="catalog__item">
-            <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 1000" class="catalog__picture">
-            <h3 class="catalog__name">Cat Energy Slim 1000 г</h3>
+            <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Slim 1000" class="catalog__picture">
+            <!-- <h3 class="catalog__name">Cat Energy Slim 1000 г</h3> -->
             <table class="catalog__table table-features">
+              <caption class="table-features__name">Cat&nbsp;Energy Slim 1000&nbsp;г</caption>
               <tr>
-                <td class="table-features__cell-name">Объем</td>
-                <td class="table-features__cell-value">1000 г</td>
+                <td class="table-features__cell">Объем</td>
+                <td class="table-features__cell table-features__cell--right">1000 г</td>
               </tr>
               <tr>
-                <td class="table-features__cell-name">Вкус</td>
-                <td class="table-features__cell-value">Гречка</td>
+                <td class="table-features__cell">Вкус</td>
+                <td class="table-features__cell table-features__cell--right">Гречка</td>
               </tr>
               <tr>
-                <td class="table-features__cell-name">Цена</td>
-                <td class="table-features__cell-value">700 Р</td>
+                <td class="table-features__cell">Цена</td>
+                <td class="table-features__cell table-features__cell--right">700 Р</td>
               </tr>
             </table>
             <a class="catalog__button button" href="">заказать</a>
           </article>
 
           <article class="catalog__item">
-            <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 500" class="catalog__picture">
-            <h3 class="catalog__name">Cat Energy PRO 500 г</h3>
+            <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Slim 500" class="catalog__picture">
+            <!-- <h3 class="catalog__name">Cat Energy PRO 500 г</h3> -->
             <table class="catalog__table table-features">
+              <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption>
               <tr>
-                <td class="table-features__cell-name">Объем</td>
-                <td class="table-features__cell-value">500 г</td>
+                <td class="table-features__cell">Объем</td>
+                <td class="table-features__cell table-features__cell--right">500 г</td>
               </tr>
               <tr>
-                <td class="table-features__cell-name">Вкус</td>
-                <td class="table-features__cell-value">Рис</td>
+                <td class="table-features__cell">Вкус</td>
+                <td class="table-features__cell table-features__cell--right">Рис</td>
               </tr>
               <tr>
-                <td class="table-features__cell-name">Цена</td>
-                <td class="table-features__cell-value">500 Р</td>
+                <td class="table-features__cell">Цена</td>
+                <td class="table-features__cell table-features__cell--right">500 Р</td>
               </tr>
             </table>
             <a class="catalog__button button" href="">заказать</a>
@@ -219,8 +227,8 @@
           </li>
         </ul>
 
-        <div class="extra__promo promo">
-          <p class="promo__text">Закажите все и получите чехол для кота в подарок!</p>
+        <div class="extra__advert advert">
+          <p class="advert__text">Закажите все и получите чехол для кота в подарок!</p>
         </div>
       </section>
 
@@ -232,35 +240,35 @@
       <div class="footer__map">
         <!-- тут будет карта вместо дива-->
       </div>
-
-      <a href="index.html" class="footer__logo-link">
-        <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo footer__logo">
-      </a>
-      <ul class="social">
-        <li class="social__item">
-          <a href="https://vk.com/" class="social__button social__button--vk">
-            <span class="visually-hidden">Vkontakte</span>
-            <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+      <div class="footer__grey">
+          <a class="footer__logo-link">
+            <img src="https://via.placeholder.com/128x24"  width="128" height="24" alt="Cat Energy" class="footer__logo">
           </a>
-        </li>
-        <li class="social__item">
-          <a href="https://www.instagram.com/" class="social__button social__button--instagram">
-            <span class="visually-hidden">Instagram</span>
-            <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
-          </a>
-        </li>
-        <li class="social__item">
-          <a href="https://www.facebook.com/" class="social__button social__button--facebook">
-            <span class="visually-hidden">Facebook</span>
-            <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
-          </a>
-        </li>
-      </ul>
-      <div class="copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/30x35"  width="30" height="35" alt="HTML Academy"></a>
-      </div>
-    </footer>
-
-  </body>
-</html>
+          <ul class="social">
+            <li class="social__item">
+              <a href="https://vk.com/" class="social__button social__button--vk">
+                <span class="visually-hidden">Vkontakte</span>
+                <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+              </a>
+            </li>
+            <li class="social__item">
+              <a href="https://www.instagram.com/" class="social__button social__button--instagram">
+                <span class="visually-hidden">Instagram</span>
+                <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+              </a>
+            </li>
+            <li class="social__item">
+              <a href="https://www.facebook.com/" class="social__button social__button--facebook">
+                <span class="visually-hidden">Facebook</span>
+                <img class="social__image" src="https://via.placeholder.com/20x20" width="20" height="20" alt="vk">
+              </a>
+            </li>
+          </ul>
+          <div class="copyright">
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+            <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/30x35"  width="30" height="35" alt="HTML Academy"></a>
+          </div>
+        </div>
+      </footer>
+    </body>
+  </html>
