--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="header">
@@ -83,34 +84,35 @@
         <!-- тут будет карта вместо дива-->
       </div>
 
-      <a href="index.html" class="footer__logo-link">
-        <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo footer__logo">
-      </a>
-      <ul class="social">
-        <li class="social__item">
-          <a href="https://vk.com/" class="social__button social__button--vk">
-            <span class="visually-hidden">Vkontakte</span>
-            <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
-          </a>
-        </li>
-        <li class="social__item">
-          <a href="https://www.instagram.com/" class="social__button social__button--instagram">
-            <span class="visually-hidden">Instagram</span>
-            <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
-          </a>
-        </li>
-        <li class="social__item">
-          <a href="https://www.facebook.com/" class="social__button social__button--facebook">
-            <span class="visually-hidden">Facebook</span>
-            <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
-          </a>
-        </li>
-      </ul>
-      <div class="copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/30x35"  width="30" height="35" alt="HTML Academy"></a>
+      <div class="footer__grey">
+        <a class="footer__logo-link">
+          <img src="https://via.placeholder.com/128x24"  width="128" height="24" alt="Cat Energy" class="footer__logo">
+        </a>
+        <ul class="social">
+          <li class="social__item">
+            <a href="https://vk.com/" class="social__button social__button--vk">
+              <span class="visually-hidden">Vkontakte</span>
+              <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="https://www.instagram.com/" class="social__button social__button--instagram">
+              <span class="visually-hidden">Instagram</span>
+              <img class="social__image" src="https://via.placeholder.com/20x20"  width="20" height="20" alt="vk">
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="https://www.facebook.com/" class="social__button social__button--facebook">
+              <span class="visually-hidden">Facebook</span>
+              <img class="social__image" src="https://via.placeholder.com/20x20" width="20" height="20" alt="vk">
+            </a>
+          </li>
+        </ul>
+        <div class="copyright">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/30x35"  width="30" height="35" alt="HTML Academy"></a>
+        </div>
       </div>
     </footer>
-
   </body>
 </html>
