--- a/source/form.html
+++ b/source/form.html
@@ -11,7 +11,7 @@
         <a href="index.html" class="nav__logo-link">
           <img src="https://via.placeholder.com/102x18"  width="102" height="18" alt="Cat Energy" class="logo">
         </a>
-        <button class="nav__toggle" type="button">Открыть меню</button>
+        <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="nav__list">
           <li class="nav__item nav__item--active"><a href="index.html">Главная</a></li>
           <li class="nav__item"><a href="catalog.html">Каталог продукции</a></li>
