--- a/source/catalog.html
+++ b/source/catalog.html
@@ -30,16 +30,16 @@
             <table class="catalog__table table-features">
               <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption>
               <tr>
-                <td class="table-features__cell-name">Объем</td>
-                <td class="table-features__cell-value">500 г</td>
+                <td class="table-features__cell">Объем</td>
+                <td class="table-features__cell table-features__cell--right">500 г</td>
               </tr>
               <tr>
-                <td class="table-features__cell-name">Вкус</td>
-                <td class="table-features__cell-value">Курица</td>
+                <td class="table-features__cell">Вкус</td>
+                <td class="table-features__cell table-features__cell--right">Курица</td>
               </tr>
               <tr>
-                <td class="table-features__cell-name">Цена</td>
-                <td class="table-features__cell-value">700 Р</td>
+                <td class="table-features__cell">Цена</td>
+                <td class="table-features__cell table-features__cell--right">700 Р</td>
               </tr>
             </table>
             <a class="catalog__button button" href="">заказать</a>
