--- a/source/catalog.html
+++ b/source/catalog.html
@@ -26,9 +26,9 @@
 
           <article class="catalog__item">
             <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 500" class="catalog__picture">
-            <!-- <h3 class="catalog__name">Cat Energy PRO 500 г</h3> -->
+            <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
             <table class="catalog__table table-features">
-              <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption>
+              <!-- <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption> -->
               <tr>
                 <td class="table-features__cell">Объем</td>
                 <td class="table-features__cell table-features__cell--right">500 г</td>
@@ -47,9 +47,9 @@
 
           <article class="catalog__item">
             <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 1000" class="catalog__picture">
-            <!-- <h3 class="catalog__name">Cat Energy PRO 1000 г</h3> -->
+            <h3 class="catalog__name">Cat&nbsp;Energy PRO 1000&nbsp;г</h3>
             <table class="catalog__table table-features">
-              <caption class="table-features__name">Cat&nbsp;Energy PRO 1000&nbsp;г</caption>
+              <!-- <caption class="table-features__name">Cat&nbsp;Energy PRO 1000&nbsp;г</caption> -->
               <tr>
                 <td class="table-features__cell">Объем</td>
                 <td class="table-features__cell table-features__cell--right">1000 г</td>
@@ -68,9 +68,9 @@
 
           <article class="catalog__item">
             <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 500" class="catalog__picture">
-            <!-- <h3 class="catalog__name">Cat Energy PRO 500 г</h3> -->
+            <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
             <table class="catalog__table table-features">
-              <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption>
+              <!-- <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption> -->
               <tr>
                 <td class="table-features__cell">Объем</td>
                 <td class="table-features__cell table-features__cell--right">500 г</td>
@@ -89,9 +89,9 @@
 
           <article class="catalog__item">
             <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 500" class="catalog__picture">
-            <!-- <h3 class="catalog__name">Cat Energy PRO 500 г</h3> -->
+            <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
             <table class="catalog__table table-features">
-              <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption>
+              <!-- <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption> -->
               <tr>
                 <td class="table-features__cell">Объем</td>
                 <td class="table-features__cell table-features__cell--right">1000 г</td>
@@ -110,9 +110,9 @@
 
           <article class="catalog__item">
             <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Slim 500" class="catalog__picture">
-            <!-- <h3 class="catalog__name">Cat Energy Slim 500 г</h3> -->
+            <h3 class="catalog__name">Cat&nbsp;Energy Slim 500&nbsp;г</h3>
             <table class="catalog__table table-features">
-              <caption class="table-features__name">Cat&nbsp;Energy Slim 500&nbsp;г</caption>
+              <!-- <caption class="table-features__name">Cat&nbsp;Energy Slim 500&nbsp;г</caption> -->
               <tr>
                 <td class="table-features__cell">Объем</td>
                 <td class="table-features__cell table-features__cell--right">500 г</td>
@@ -131,9 +131,9 @@
 
           <article class="catalog__item">
             <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Slim 1000" class="catalog__picture">
-            <!-- <h3 class="catalog__name">Cat Energy Slim 1000 г</h3> -->
+            <h3 class="catalog__name">Cat&nbsp;Energy Slim 1000&nbsp;г</h3>
             <table class="catalog__table table-features">
-              <caption class="table-features__name">Cat&nbsp;Energy Slim 1000&nbsp;г</caption>
+              <!-- <caption class="table-features__name">Cat&nbsp;Energy Slim 1000&nbsp;г</caption> -->
               <tr>
                 <td class="table-features__cell">Объем</td>
                 <td class="table-features__cell table-features__cell--right">1000 г</td>
@@ -152,9 +152,9 @@
 
           <article class="catalog__item">
             <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Slim 500" class="catalog__picture">
-            <!-- <h3 class="catalog__name">Cat Energy PRO 500 г</h3> -->
+            <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
             <table class="catalog__table table-features">
-              <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption>
+              <!-- <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption> -->
               <tr>
                 <td class="table-features__cell">Объем</td>
                 <td class="table-features__cell table-features__cell--right">500 г</td>
@@ -187,8 +187,8 @@
             <h3 class="extra__name">Сахарозаменитель</h3>
             <table class="extra__table table-extra">
               <tr>
-                <td class="table-extra__cell-name">1 упаковка (100 г)</td>
-                <td class="table-extra__cell-value">200 Р.</td>
+                <td class="table-extra__cell">1 упаковка (100 г)</td>
+                <td class="table-extra__cell table-extra__cell--right">200 Р.</td>
               </tr>
             </table>
             <a class="extra__button button" href="">заказать</a>
@@ -197,8 +197,8 @@
             <h3 class="extra__name">Питьевая вода</h3>
             <table class="extra__table table-extra">
               <tr>
-                <td class="table-extra__cell-name">5 литров</td>
-                <td class="table-extra__cell-value">50 Р.</td>
+                <td class="table-extra__cell">5 литров</td>
+                <td class="table-extra__cell table-extra__cell--right">50 Р.</td>
               </tr>
             </table>
             <a class="extra__button button" href="">заказать</a>
@@ -208,8 +208,8 @@
             <h3 class="extra__name">Молоко</h3>
             <table class="extra__table table-extra">
               <tr>
-                <td class="table-extra__cell-name">1 литр</td>
-                <td class="table-extra__cell-value">100 Р.</td>
+                <td class="table-extra__cell">1 литр</td>
+                <td class="table-extra__cell table-extra__cell--right">100 Р.</td>
               </tr>
             </table>
             <a class="extra__button button" href="">заказать</a>
@@ -219,28 +219,30 @@
             <h3 class="extra__name">Витамины</h3>
             <table class="extra__table table-extra">
               <tr>
-                <td class="table-extra__cell-name">1 упаковка (30 г))</td>
-                <td class="table-extra__cell-value">300 Р.</td>
+                <td class="table-extra__cell">1 упаковка (30 г)</td>
+                <td class="table-extra__cell table-extra__cell--right">300 Р.</td>
               </tr>
             </table>
             <a class="extra__button button" href="">заказать</a>
           </li>
         </ul>
 
-        <div class="extra__advert advert">
-          <p class="advert__text">Закажите все и получите чехол для кота в подарок!</p>
+        <div class="extra__gift gift">
+          <p class="gift__text">Закажите все и&nbsp;получите чехол для кота в подарок!</p>
         </div>
       </section>
 
     </main>
     <footer class="footer">
-      <h2 class="footer__header">приглашаем к сотрудничеству дилеров!</h2>
-      <address class="footer__address">ул. Большая Конюшенная, д. 19/8
-      Санкт-Петербург</address>
+        <div class="footer__wrapper footer__wrapper--grey">
+            <h2 class="footer__header">приглашаем к&nbsp;сотрудничеству дилеров!</h2>
+            <address class="footer__address">ул. Большая Конюшенная,&nbsp;д.&nbsp;19/8
+          Санкт-Петербург</address>
+        </div>
       <div class="footer__map">
         <!-- тут будет карта вместо дива-->
       </div>
-      <div class="footer__grey">
+        <div class="footer__grey"> <!-- скорее всего лишний-->
           <a class="footer__logo-link">
             <img src="https://via.placeholder.com/128x24"  width="128" height="24" alt="Cat Energy" class="footer__logo">
           </a>
