--- a/source/index.html
+++ b/source/index.html
@@ -38,7 +38,7 @@
           <!-- <img class="program__logo program__logo--mass" src="https://via.placeholder.com/55x55"  width="55" height="55" alt="mass logo"> -->
           <h3 class="program__header">Набор массы</h3>
           <p class="program__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a href="" class="program__link">Каталог Slim</a>
+          <a href="" class="program__link">Каталог Pro</a>
         </div>
       </section>
       <section class="advantages">
@@ -77,9 +77,11 @@
       </section>
     </main>
     <footer class="footer">
-      <h2 class="footer__header">приглашаем к сотрудничеству дилеров!</h2>
-      <address class="footer__address">ул. Большая Конюшенная, д. 19/8
+      <div class="footer__wrapper">
+        <h2 class="footer__header">приглашаем к&nbsp;сотрудничеству дилеров!</h2>
+        <address class="footer__address">ул. Большая Конюшенная,&nbsp;д.&nbsp;19/8
       Санкт-Петербург</address>
+    </div>
       <div class="footer__map">
         <!-- тут будет карта вместо дива-->
       </div>
