--- a/source/catalog.html
+++ b/source/catalog.html
@@ -25,8 +25,12 @@
         <div class="catalog__list">
 
           <article class="catalog__item">
-            <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 500" class="catalog__picture">
-            <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
+            <a href="product.html" class="catalog__link">
+              <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 500" class="catalog__picture">
+            </a>
+            <a href="product.html" class="catalog__link">
+              <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
+            </a>
             <table class="catalog__table table-features">
               <!-- <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption> -->
               <tr>
@@ -46,8 +50,12 @@
           </article>
 
           <article class="catalog__item">
-            <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 1000" class="catalog__picture">
-            <h3 class="catalog__name">Cat&nbsp;Energy PRO 1000&nbsp;г</h3>
+            <a href="product.html" class="catalog__link">
+              <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 1000" class="catalog__picture">
+            </a>
+            <a href="product.html" class="catalog__link">
+              <h3 class="catalog__name">Cat&nbsp;Energy PRO 1000&nbsp;г</h3>
+            </a>
             <table class="catalog__table table-features">
               <!-- <caption class="table-features__name">Cat&nbsp;Energy PRO 1000&nbsp;г</caption> -->
               <tr>
@@ -67,8 +75,12 @@
           </article>
 
           <article class="catalog__item">
-            <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 500" class="catalog__picture">
-            <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
+            <a href="product.html" class="catalog__link">
+              <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 500" class="catalog__picture">
+            </a>
+            <a href="product.html" class="catalog__link">
+              <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
+            </a>
             <table class="catalog__table table-features">
               <!-- <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption> -->
               <tr>
@@ -88,8 +100,12 @@
           </article>
 
           <article class="catalog__item">
-            <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 500" class="catalog__picture">
-            <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
+            <a href="product.html" class="catalog__link">
+              <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Pro 500" class="catalog__picture">
+            </a>
+            <a href="product.html" class="catalog__link">
+              <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
+            </a>
             <table class="catalog__table table-features">
               <!-- <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption> -->
               <tr>
@@ -108,9 +124,13 @@
             <a class="catalog__button button" href="">заказать</a>
           </article>
 
-          <article class="catalog__item">
-            <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Slim 500" class="catalog__picture">
-            <h3 class="catalog__name">Cat&nbsp;Energy Slim 500&nbsp;г</h3>
+          <article class="catalog__item" class="catalog__link">
+            <a href="product.html">
+              <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Slim 500" class="catalog__picture">
+            </a>
+            <a href="product.html" class="catalog__link">
+              <h3 class="catalog__name">Cat&nbsp;Energy Slim 500&nbsp;г</h3>
+            </a>
             <table class="catalog__table table-features">
               <!-- <caption class="table-features__name">Cat&nbsp;Energy Slim 500&nbsp;г</caption> -->
               <tr>
@@ -129,9 +149,13 @@
             <a class="catalog__button button" href="">заказать</a>
           </article>
 
-          <article class="catalog__item">
-            <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Slim 1000" class="catalog__picture">
-            <h3 class="catalog__name">Cat&nbsp;Energy Slim 1000&nbsp;г</h3>
+          <article class="catalog__item" class="catalog__link">
+            <a href="product.html">
+              <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Slim 1000" class="catalog__picture">
+            </a>
+            <a href="product.html" class="catalog__link">
+              <h3 class="catalog__name">Cat&nbsp;Energy Slim 1000&nbsp;г</h3>
+            </a>
             <table class="catalog__table table-features">
               <!-- <caption class="table-features__name">Cat&nbsp;Energy Slim 1000&nbsp;г</caption> -->
               <tr>
@@ -151,8 +175,12 @@
           </article>
 
           <article class="catalog__item">
-            <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Slim 500" class="catalog__picture">
-            <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
+            <a href="product.html" class="catalog__link">
+              <img src="https://via.placeholder.com/140x144"  width="140" height="144" alt="Cat Energy Slim 500" class="catalog__picture">
+            </a>
+            <a href="product.html" class="catalog__link">
+              <h3 class="catalog__name">Cat&nbsp;Energy PRO 500&nbsp;г</h3>
+            </a>
             <table class="catalog__table table-features">
               <!-- <caption class="table-features__name">Cat&nbsp;Energy PRO 500&nbsp;г</caption> -->
               <tr>
